# ticevid

./: .gitignore  Cargo.toml  Makefile.toml  README.md  default.nix  flake.nix  makefile  shell.nix
asset-builder/: Cargo.toml
asset-builder/src/: sprite.rs
assets/font/: main.toml
assets/fontpack/: main.toml
docs/: README.md  video_binary_spec.md  video_definition.md
frame-encoder/: Cargo.toml
frame-encoder/src/: encode.rs  frame.rs  main.rs  serialize.rs
include/: macros.inc
resources/video/: video.toml
src/: draw.c  draw.h  error.c  error.h  gfx.asm  init.c  init.h  io.c  io.h  libload.asm  main.asm  main.c  player.asm  qoi.c  qoi.h  ui.c  ui.h  update.c  update.h  usb.asm  usb.c  usb.h  video.c  video.h
ticevid-encoder/: Cargo.toml
ticevid-encoder/src/: definition.rs  encode.rs  frame.rs  main.rs  serialize.rs
ticevid-encoder/src/definition/: container.rs  title.rs
