[package]
name = "asset-builder"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
image = { workspace = true, features = ["png"] }
imageproc.workspace = true
indexmap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_valid = { workspace = true, features = ["serde_toml", "toml"] }
toml.workspace = true
