[package]
name = "frame-encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "0.11.8"
image = { version = "0.25.8", default-features = false, features = ["qoi"] }
log = { version = "0.4.28", features = ["max_level_trace", "release_max_level_info", "std"] }
lzss = { version = "0.9.1", default-features = false, features = ["std"] }
rlimit = "0.10.2"
rust_ffmpeg = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
toml = "0.9.5"
u24 = "0.4.0"
